<resources>
    <string name="app_name">JavaProject</string>
    <string name="get">Get</string>
    <string name="update">Update</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password!</string>
    <string name="enter_Username">Enter Username!</string>
    <string name="log_in">Log IN</string>
    <string name="title_activity_logged_in">LoggedIn</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="sign_up">Sign UP</string>
    <string name="enter_username">Enter Username:</string>
    <string name="enter_password1">Enter Password:</string>
    <string name="re_enter_password">Re-enter Password:</string>
    <string name="enter_name">Enter Name:</string>
    <string name="enter_phone">Enter Phone:</string>
    <string name="confirm">Confirm</string>
    <string name="done">done</string>\
</resources>
